--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ file(GLOB SOURCES "${PROJECT_SOURCE_DIR}/src/*.c")
 
 add_executable(memdumper ${SOURCES})
 
+target_compile_options(memdumper PRIVATE -Wall -g)
+
 # Use GoogleTest framework for testing 
 enable_testing()
 
